# pylint_github_issue_links

./: pyproject.toml
pylint_github_issue_links/: __init__.py  github_check.py
tests/: test_github_check.py
